Update 'java-quarkus-xsqhzsdg' component image to: quay.io/rhtap_qe/java-quarkus-xsqhzsdg:9db9112426fdf0992e12cdda82fb9c5a5fb7cef5@sha256:794c71ff946db5d64e41f53668ee976a05587e476ed543a97c380d1bf6b52a80

--- a/components/java-quarkus-xsqhzsdg/overlays/development/deployment-patch.yaml
+++ b/components/java-quarkus-xsqhzsdg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-quarkus-xsqhzsdg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/java-quarkus-xsqhzsdg:9db9112426fdf0992e12cdda82fb9c5a5fb7cef5@sha256:794c71ff946db5d64e41f53668ee976a05587e476ed543a97c380d1bf6b52a80
+          name: container-image
